update passenger component add contact details form

--- a/src/app/components/passengers/passengers.component.css
+++ b/src/app/components/passengers/passengers.component.css
@@ -259,6 +259,10 @@ form
     margin-right: 1.5rem;
 }
 /***************Contact***********/
+.contact__summary
+{
+    width: 100%;
+}
 
 .contactdetails
 {
