update small changes

--- a/src/app/components/adminfooter/adminfooter.component.html
+++ b/src/app/components/adminfooter/adminfooter.component.html
@@ -7,7 +7,7 @@
                 <div class="fa fa-google"></div>
             </div>
             <div class="copyrighttext">
-                © 2020 LOREM IPSUM PVT. LTD.<br>
+                © 2020 ASAY AIRLINES PVT. LTD.<br>
                 Country India 
             </div>
         </div>
