--- a/src/app/components/airplanecard/airplanecard.component.html
+++ b/src/app/components/airplanecard/airplanecard.component.html
@@ -18,7 +18,7 @@
         
         </div>
         <div class="card__section card__duration">
-            <div class="card__duration--name">Lorem Ipsum</div>
+            <div class="card__duration--name">ASAY AIRLINES</div>
             <div class="card__duration--time">{{a.duration}}</div>
             <div class="card__duration--type">NON-STOP</div>
         </div>
