business economy price added

--- a/src/app/components/addflight/addflight.component.html
+++ b/src/app/components/addflight/addflight.component.html
@@ -149,7 +149,36 @@
                         </select>
                     </div>
                     
-                </div><br><br>
+                </div><br>
+                
+                <div class="row">
+                    <label for="business_cost" class="col-sm-3 control-label">Business Price</label>
+                    <div class="col-sm-9" id="business_cost"><input type ="text" name="business_cost" class="form-control" placeholder="Business Class Price" required #business_cost="ngModel"
+                        [(ngModel)]="addflight.business_cost">
+                        <div
+                        *ngIf="!business_cost?.valid && (business_cost?.dirty ||business_cost?.touched)" class="errors">
+                        <div *ngIf="business_cost.errors.required">
+                            <span class="msg">&#9888; Enter Business Class Price</span>
+                        </div>
+                        </div>
+                    </div>
+                </div><br>
+
+                <div class="row">
+                    <label for="economy_cost" class="col-sm-3 control-label">Economy Price</label>
+                    <div class="col-sm-9" id="economy_cost"><input type ="text" name="economy_cost" class="form-control" placeholder="Economy Class Price" required #economy_cost="ngModel"
+                        [(ngModel)]="addflight.economy_cost">
+                        <div
+                        *ngIf="!economy_cost?.valid && (economy_cost?.dirty ||economy_cost?.touched)" class="errors">
+                        <div *ngIf="economy_cost.errors.required">
+                            <span class="msg">&#9888; Enter Economy Class Price</span>
+                        </div>
+                        </div>
+                    </div>
+                </div><br>
+                
+                
+                <br>
                 <div>
                     <div>
                         <button class="bt add" type="submit" [disabled]="!AddFlightForm.valid" [ngStyle]="{'cursor': (!AddFlightForm.valid? 'not-allowed':'pointer')}" >Add Flight</button>
