--- a/src/app/components/adminfooter/adminfooter.component.css
+++ b/src/app/components/adminfooter/adminfooter.component.css
@@ -1,85 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
-
-
-/* Header */
-header 
-{
-
-    display: flex;
-    align-items: center;
-    height: 6.5rem;
-    background-color: rgb(63, 59, 59); 
-    font-weight:600;
-    width: 100%;
-    color: white;
-    position: relative;
-}
-
-.logo 
-{
-    padding-left: 3rem;
-}
-.nav-items
-{
-    position: absolute;
-    right: 2rem;
-}
-
-.nav-items>a
-{
-    padding: 0 3rem;
-    cursor: pointer;
-}
-
-ul { 
-    padding: 0; 
-    list-style: none; 
-    display: table;
-    text-align: center;
-  }
-  li { 
-    display: table-cell; 
-    position: relative; 
-    padding: 15px 0;
-  }
-  a {
-    color: #fff;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 0.25rem;
-    display: inline-block;
-    padding: 15px 20px;
-    position: relative;
-  }
-  a:after {    
-    background: none repeat scroll 0 0 transparent;
-    bottom: .5rem;
-    content: "";
-    display: block;
-    height: 2px;
-    left: 50%;
-    position: absolute;
-    background: #fff;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    width: 0;
-  }
-  a:hover:after { 
-    width: 90%; 
-    left: 1rem; 
-  }
-/* *********SEARCH DETAILS***************** */
-
-
-
-
-
 /*FOOTER*/
 footer
 {
     padding: 1.5rem 3.5rem;
-    background-color: rgb(63, 59, 59); 
-    font-weight:600;
+    background-color: #000; 
     max-width: 100vw;
     min-width: 100vw;
     display: flex;
