--- a/src/app/components/adminheader/adminheader.component.css
+++ b/src/app/components/adminheader/adminheader.component.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
-
-
 /* Header */
 header 
 {
@@ -9,8 +7,7 @@ header
     display: flex;
     align-items: center;
     height: 6.5rem;
-    background-color: rgb(63, 59, 59); 
-    font-weight:600;
+    background-color:#111; 
     width: 100%;
     color: white;
     position: relative;
@@ -68,75 +65,4 @@ ul {
     width: 90%; 
     left: 1rem; 
   }
-/* *********SEARCH DETAILS***************** */
 
-
-
-
-
-/*FOOTER*/
-footer
-{
-    padding: 1.5rem 3.5rem;
-    background-color: rgb(63, 59, 59); 
-    font-weight:600;
-    max-width: 100vw;
-    min-width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: 0;
-}
-.Container
-{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 85%;
-
-}
-.fa {
-    
-    font-size: 3.5rem;
-    width: 30px;
-    text-align: center;
-    text-decoration: none;
-    margin: 1rem;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  
-  .fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook,.fa-twitter,.fa-google {
-  color: floralwhite;
-}
-
-.copyrighttext
-{
-    color: rgba(255, 250, 240, 0.918);
-}
-
-@media screen and (max-width:768px)
-{
-    footer, header
-    {
-      padding: 3rem 0.5rem;
-      width:auto;
-
-    }
-    .Container 
-    {
-      width: 100%;
-    }
-
-    .fa 
-    {
-      font-size: 1.8rem;
-      margin: 0.5rem;
-      width: 2.5rem;
-    }
-    
-}
