update displayflightcomponent.html add go to admin button

--- a/src/app/components/displayflight/displayflight.component.html
+++ b/src/app/components/displayflight/displayflight.component.html
@@ -4,7 +4,7 @@
  <div class="search-details">
     <div class="heading">
         <h2 class="heading--title">Search Results</h2>
-        <h4 class="heading--results">We found {{flights.length}} results</h4>
+        <!-- <h4 class="heading--results">We found {{flights.length}} results</h4> -->
     </div>
  </div>
  <div class="travel-details" *ngIf = "arrival!=null">
