--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -100,3 +100,6 @@
   </div>
 
 <app-footer></app-footer>
+<footer class="admin--login"> 
+      <a [routerLink]="['/AdminLogin']">Go to admin</a>
+</footer>
