add route for booking rules

--- a/src/app/components/adminlogin/adminlogin.component.css
+++ b/src/app/components/adminlogin/adminlogin.component.css
@@ -34,7 +34,7 @@
 .loginform__heading
 {
     font-size: 3.0rem;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Poppins', sans-serif;
     padding: 3rem 0;
     font-weight: 600;
 }
@@ -48,12 +48,12 @@
     text-transform: capitalize;
     display: block;
     margin-bottom: 0.5rem;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
 }
 .loginform__input
 {       
-        font-family: 'Rubik', sans-serif;
+        font-family: 'Poppins', sans-serif;
         line-height: 5rem;
         background: #fafafa;
         -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
@@ -73,14 +73,14 @@
         border: solid rgb(114, 111, 111);
         border-width: 1px;
         outline:none;
-        font-weight:550;
+        font-weight:500;
 
     
 }
 .msg{
     font-size:15px;
     color:red;
-    font-weight: 700;
+    font-weight: 500;
 }
 .pwdcontainer
 {
