removed await and replaced Transaction id with PNR

--- a/src/app/components/eticket/eticket.component.html
+++ b/src/app/components/eticket/eticket.component.html
@@ -8,7 +8,7 @@
 
         </div>
         <div class="book_head">
-            <span >Transaction Id : {{transaction_id}} </span><span class="bookdate">Booking Date: {{booking_date}}</span>
+            <span >PNR : {{transaction_id}} </span><span class="bookdate">Booking Date: {{booking_date}}</span>
             
         </div>
         <div>
