update sidebar logout

--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
             <a [routerLink]="['/flight/user/dashboard/cancelled']"> <i class="fa fa-calendar ico"></i> Cancellation History </a>
         </div>
         <div class="section">
-            <a><i class="fa fa-sign-out ico" (click) = "handleLogout()"></i>  Logout </a> 
+            <a (click) = "handleLogout()"><i class="fa fa-sign-out ico" ></i>  Logout </a> 
         </div>
     </div>
 </div>
