--- a/src/app/components/airplanecard/airplanecard.component.html
+++ b/src/app/components/airplanecard/airplanecard.component.html
@@ -2,7 +2,7 @@
     <div class="card"  *ngIf = "checktime(a.departure_time)">
         <div class="card__section card__flight" >
             <div class="card__flight--logo">
-                <img src="../../assets/logo.png" style="height: 6rem;">
+                <div class="card__flight__logo__img"></div>
             </div>
             <div class="card__flight--number">
                 {{'AI'+a.flight_number}}
