--- a/src/app/components/eticket/eticket.component.html
+++ b/src/app/components/eticket/eticket.component.html
@@ -3,7 +3,7 @@
 
     <div class="page">
         <div class="heading">
-            <img class="head_logo" src="../../../assets/logo3.png"><h2 class="eticket">E-Ticket</h2>
+            <div class="airlineLogo"><h2 class="eticket">E-Ticket</h2>
             
 
         </div>
