--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <a [routerLink]="['/']"><img style="width: 6rem; height: 6rem;" src="../../../assets/logo3.png"></a>   
+        <div class="header-logo" [routerLink]="['/']"></div>   
      </div>
     <div class="nav-items">
         <ul>
