--- a/src/app/components/seatui/seatui.component.html
+++ b/src/app/components/seatui/seatui.component.html
@@ -8,7 +8,7 @@
 <div class="parent">
     <div class="airplane-seatswrapper">   
         <div class="cockpit"> 
-            <img src="../../../assets/cockpit.png">
+            <div class="cockpit-img flight-image" ></div>
         </div>
         <div class="seatwrapper">
             <div class="airplane-left">
@@ -71,7 +71,7 @@
               </div>
         </div>
         <div class="tail"> 
-            <img src="../../../assets/tail.a786df74.png">
+            <div class="tail-img flight-image" ></div>
         </div>
 
     </div>
