--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,12 @@ body {
     overflow-x: hidden !important;
 }
 html, body { height: 100%; }
+
+.header-logo
+{
+  width: 6rem;
+  height: 6rem;
+  background-image: url('./assets/logo3.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
